kubernetes/.archive/crunchy-postgres/cluster/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pg-backup
spec:
  endpointSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: postgres
  egress:
    - toFQDNs: # backblaze b2
        - matchName: "s3.us-east-005.backblazeb2.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP

# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: apps-postgres-ingress
spec:
  endpointSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: postgres
  ingress:
    - fromEndpoints:
        - matchLabels:
            db.home.arpa/pg: postgres
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists # any namespace

# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: apps-to-pg-postgres
spec:
  endpointSelector:
    matchLabels:
      db.home.arpa/pg: postgres
  egress:
    # Connections to master
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres
            postgres-operator.crunchydata.com/role: master
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: "TCP"
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres
            postgres-operator.crunchydata.com/role: master
            io.kubernetes.pod.namespace: database
      icmps: [{}]

    # Connections to pgbouncer
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres
            postgres-operator.crunchydata.com/role: pgbouncer
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: "TCP"
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres
            postgres-operator.crunchydata.com/role: pgbouncer
            io.kubernetes.pod.namespace: database
      icmps: [{}]
